<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/removeDialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background_dialog"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/color_Primary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/removePasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorNoteColor2"
            android:fontFamily="@font/ubunturegular"
            android:gravity="center_vertical"
            android:text="@string/do_you_want_to_remove_the_password"
            android:textColor="@color/white"
            android:textColorHint="@color/colorIcons"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_Primary"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/noRemovePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_Primary"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/no"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/yesRemovePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_Primary"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/remove"
            android:textColor="@color/colorNoteColor2" />
    </LinearLayout>


</LinearLayout>