<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/my_note"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorTextHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/menuDrawerHomeLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/menuDrawerHomeIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_round_home"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuDrawerFavouritiesLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/menuDrawerFavouritiesIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_favorite_24"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/favourities"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuDrawerRemovedLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/menuDrawerRemovedIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_outline_removed"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/removed"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorTextHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/profile"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/menuDrawerLoginLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/menuDrawerLoginIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_login"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorTextHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/communicate"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/menuDrawerShareLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/menuDrawerShareIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_share"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuDrawerRateLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/menuDrawerRateIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_round_rate"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>