<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/todoCastomizerLl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscallaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/bottom_sheet_behavior"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/todoCastomizerTitleTv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/ubuntumedium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/castomizer"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/todoCastomizerPanelLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="13dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntumedium"
            android:includeFontPadding="false"
            android:text="@string/options"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/todoCastomizerFavoutiteCb"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginStart="10dp"
            android:button="@null"
            android:contentDescription="@string/app_name"
            android:drawableRight="@drawable/checkbox_favourite_selector"
            android:padding="11dp" />

        <ImageView
            android:id="@+id/todoCastomizerLockIv"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:contentDescription="@string/app_name"
            android:padding="11dp"
            android:src="@drawable/ic_baseline_lock"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/todoCastomizerInfoIv"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:contentDescription="@string/app_name"
            android:padding="11dp"
            android:src="@drawable/ic_outline_info"
            app:tint="@color/white" />
    </LinearLayout>
</LinearLayout>