<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_Primary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <EditText
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/title_addEditFrag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/color_Primary"
                android:fontFamily="@font/ubuntubold"
                android:hint="@string/note_title"
                android:maxLength="25"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewSubtitleIndicator"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_addEditFrag" />

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="7dp"
                android:layout_height="32dp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/mess_addEditFrag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/color_Primary"
                android:fontFamily="@font/ubuntumedium"
                android:gravity="left"
                android:hint="@string/type_note_here"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageNote" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/layout_miscellaneous" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>