<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentCheckPasswordLl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorQuickActionsBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fragmentCheckPasswordTitleLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragmentCheckPasswordTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorNoteColor2"
            android:fontFamily="@font/robotoligth"
            android:gravity="bottom"
            android:text="@string/password_colon"
            android:textColor="@color/gold"
            android:textColorHint="@color/colorIcons"
            android:textSize="17sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentCheckPasswordPasswordLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCheckPasswordTitleLl">

        <EditText
            android:id="@+id/fragmentCheckPasswordPasswordEt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorNoteColor2"
            android:fontFamily="@font/robotoligth"
            android:gravity="bottom"
            android:hint="@string/password_stars"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:minWidth="50dp"
            android:textColor="@color/white"
            android:textColorHint="#474747"
            android:textSize="25sp"
            android:textStyle="normal" />

    </LinearLayout>

    <Button
        android:id="@+id/fragmentCheckPasswordOkBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/robotoligth"
        android:text="@string/ok"
        android:textColor="@color/colorNoteColor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCheckPasswordPasswordLl" />
</androidx.constraintlayout.widget.ConstraintLayout>