<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addItemDialogLl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorQuickActionsBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fragmentAddPasswordTitleLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragmentAddPasswordTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorNoteColor2"
            android:fontFamily="@font/robotoligth"
            android:gravity="bottom"
            android:text="@string/password_colon"
            android:textColor="@color/gold"
            android:textColorHint="@color/colorIcons"
            android:textSize="17sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentAddPasswordPasswordLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fragmentAddPasswordAddLl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAddPasswordTitleLl">

        <EditText
            android:id="@+id/fragmentAddPasswordPasswordEt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorNoteColor2"
            android:fontFamily="@font/robotoligth"
            android:gravity="bottom"
            android:hint="@string/password_stars"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:minWidth="50dp"
            android:textColor="@color/white"
            android:textColorHint="#474747"
            android:textFontWeight="@integer/config_navAnimTime"
            android:textSize="25sp"
            android:textStyle="normal"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentAddPasswordAddLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:background="@color/color_Primary"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAddPasswordPasswordLl">

        <Button
            android:id="@+id/fragmentAddPasswordAddBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@color/color_Primary"
            android:fontFamily="@font/robotoligth"
            android:text="@string/add"
            android:textColor="@color/colorNoteColor2" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>