<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/beforeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/color_Primary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/toolbar_fragmentAddEdit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/color_Primary"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back"
                app:titleTextColor="@color/white">

                <ImageView
                    android:id="@+id/back_from_addEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:layout_centerVertical="true"
                    app:tint="@color/colorIcons" />

                <TextView
                    android:id="@+id/toolbar_Title_AddEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your note"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorIcons" />

                <ImageView
                    android:id="@+id/editNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:tint="@color/colorIcons" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_fragmentAddEdit">

                <View
                    android:id="@+id/viewSubtitleIndicator"
                    android:layout_width="7dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/background_subtitle_indicator" />

                <TextView
                    android:id="@+id/title_addEditFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/color_Primary"
                    android:fontFamily="@font/robotoligth"
                    android:gravity="center_vertical"
                    android:hint="@string/note_title"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="26sp"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewImageBeforeFrag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:maxWidth="80dp"
                android:maxHeight="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line1" />

            <TextView
                android:id="@+id/mess_addEditFrag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@color/color_Primary"
                android:fontFamily="@font/robotoligth"
                android:gravity="left"
                android:hint="@string/type_note_here"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="20sp"
                android:autoLink="all"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewImageBeforeFrag" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/include_miscellaneous_beforeAddEdit"
        layout="@layout/note_edit_layout_miscellaneous" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>